Bug 262805 - Balance of shares incorrect after a buy transaction
Summary: Balance of shares incorrect after a buy transaction
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Baumgart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-10 23:17 UTC by David Houlden
Modified: 2011-01-11 13:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2011-01-10 23:17:42 UTC
Version:           SVN trunk (using KDE 4.5.4) 
OS:                Linux

In the ledger I have a buy transaction for 600 shares in a company. It shows a quantity of 600 and balance of 600.
I then enter another buy of 100 shares.
The original entry now shows a quantity of 600 with balance of 500 (should be 600).
The second entry shows a quantity of 100 with balance of 600 (should be 700).

Reproducible: Always
Comment 1 David Houlden 2011-01-10 23:19:38 UTC
The balance is also wrong in the investments and accounts views.
Comment 2 Thomas Baumgart 2011-01-11 07:08:34 UTC
This could well be related to the latest performance changes I made. I'll check into it.
Comment 3 Thomas Baumgart 2011-01-11 13:00:58 UTC
SVN commit 1213725 by tbaumgart:

Update balance of investment type accounts upon modification. This was introduced with the recent performance improvement changes and should also be considered when backporting to the stable branch

BUG: 262805

 M  +22 -12    mymoneyseqaccessmgr.cpp  
 M  +13 -0     mymoneyseqaccessmgr.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213725