Update balance of investment type accounts upon modification. This was introduced with the recent performance improvement changes and should also be considered when backporting to the stable branch

BUG: 262805

svn path=/trunk/extragear/office/kmymoney/; revision=1213725